# deepin-lang-selector

./: CMakeLists.txt  ChangeLog
debian/: changelog  control  copyright  rules
src/: CMakeLists.txt  main.cpp
src/base/: consts.h  file_util.cpp
src/resources/: CMakeLists.txt
src/scripts/: 1050-deepin-lang-selector  CMakeLists.txt  session.wrapper
src/ui/: main_window.cpp  main_window.h
src/ui/frames/: select_language_frame.cpp  select_language_frame.h
src/ui/models/: language_list_model.cpp  language_list_model.h
src/ui/utils/: widget_util.cpp
src/ui/widgets/: flat_button.cpp
